--- a/.github/workflows/hugo-to-gh-pages-workflow.yml
+++ b/.github/workflows/hugo-to-gh-pages-workflow.yml
@@ -20,5 +20,5 @@ jobs:
     # Fetch Hugo to Firebase docker image
     - uses: nasirhm/hugo-on-gh-pages
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         GITHUB_REPO: ${{ secrets.GITHUB_REPO }}
