--- a/.github/workflows/hugo-to-gh-pages-workflow.yml
+++ b/.github/workflows/hugo-to-gh-pages-workflow.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # Fetch Hugo to Firebase docker image
-    - uses: nasirhm/hugo-on-gh-pages
+    - uses: nasirhm/hugo-on-gh-pages@master
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        GITHUB_REPO: ${{ secrets.GITHUB_REPO }}
+        GITHUB_REPO: ${{ secrets.BASE_REPO }}
