--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # Fetch Hugo to Firebase docker image
-    - uses: nasirhm/hugo-on-gh-pages@master
+    - uses: nasirhm/hugo-on-gh-pages@0.1.0
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         GITHUB_REPO: ${{ secrets.BASE_REPO }}
